syntax = "proto3";
import "google/protobuf/empty.proto";

service KVStable{
    rpc write_sstables (EvictedBuffers) returns (EvictionResponse) {}
    rpc read_sstables (GetRequest) returns (GetResponse) {}
    rpc write_blocks (SerialisedBlock) returns (google.protobuf.Empty) {} 
}

message EvictedBuffers {
    map<string, bytes> eviction = 1;
}

message EvictionResponse {

}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
    enum Status {
        FOUND = 0;
        NOTFOUND = 1;
        ERROR = 2;
    }
    Status status = 2;
}

message SerialisedBlock {
    bytes block = 1;
    repeated bool valid_flags = 2;
}

